@@ -1,10 +1,10 @@
-.\" RCSid "$Id: vwrays.1,v 1.8 2011/08/20 20:57:51 greg Exp $"
+.\" RCSid "$Id: vwrays.1,v 1.9 2012/06/14 05:19:05 greg Exp $"
 .TH VWRAYS 1 1/15/99 RADIANCE
 .SH NAME
 vwrays - compute rays for a given picture or view
 .SH SYNOPSIS
 .B vwrays
-.B "[ -i -u -f{a|f|d} | -d ]"
+.B "[ -i -u -f{a|f|d} -c rept | -d ]"
 {
 .B "view opts .."
 |
@@ -36,6 +36,18 @@ default ASCII.
 Using raw float or double records for example can reduce the time
 requirements of transferring and interpreting information in
 .I rtrace.
+.PP
+The
+.I \-c
+option repeats each pixel the given number of times (default is 1).
+This is most useful when sending rays to
+.I rtcontrib(1)
+with the same
+.I \-c
+setting, providing a much faster way to average pixels over image sets.
+The
+.I \-pj
+option should be used to jitter sample postions in most cases.
 .PP
 View options may be any combination of standard view parameters described
 in the
